tests/paczka1/fuzzy1/89944601.err
Error in line 1: KWF S451 17,9
Error in line 10: t6cWfopO5eK A760 54,3
Error in line 21: yhFAjmX A394 35,9
Error in line 27: C80RQZuHW A760 23,0
Error in line 36: KWF A394 98,1
